[gd_scene load_steps=5 format=4 uid="uid://ci63qrx0cqk8p"]

[ext_resource type="Script" uid="uid://drxhwji5s0rgy" path="res://script/player_upgrade.gd" id="1_ky6jo"]
[ext_resource type="TileSet" uid="uid://canr2c7puh78g" path="res://asset/tileset/dungeon_tileset.tres" id="2_4mnel"]
[ext_resource type="FontFile" uid="uid://bfd8lxmo20ddl" path="res://asset/font/Everyday_Tiny_Bold.ttf" id="3_4xgvd"]
[ext_resource type="Theme" uid="uid://b4hwtdp2epofe" path="res://asset/theme/toggle.tres" id="4_ky6jo"]

[node name="player_upgrade" type="Node2D"]
script = ExtResource("1_ky6jo")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAcABAAAAAAAAEAAAAdAA8AAAAAAAIAAAAcAA8AAAAAAAMAAAAdAA8AAAAAAAQAAAAcAA8AAAAAAAUAAAAbABEAAAAAAAYAAAAcABEAAAAAAAcAAAAcAA8AAAAAAAgAAAAbABAAAAAAAAkAAAAcABAAAAAAAAoAAAAdABEAAAAAAAsAAAAbAA8AAAAAAAwAAAAbABAAAAAAAA0AAAAcAA8AAAAAAA4AAAAdABEAAAAAAA8AAAAcAA8AAAAAABAAAAAdABAAAAAAABEAAAAbABEAAAAAABIAAAAcAA8AAAAAABMAAAAcABAAAAABAAAAAAAdABAAAAABAAEAAAAbAA8AAAABAAIAAAAbABAAAAABAAMAAAAdAA8AAAABAAQAAAAdAA8AAAABAAUAAAAcABEAAAABAAYAAAAbABAAAAABAAcAAAAcABAAAAABAAgAAAAbAA8AAAABAAkAAAAbABAAAAABAAoAAAAdAA8AAAABAAsAAAAbABEAAAABAAwAAAAbABEAAAABAA0AAAAbABAAAAABAA4AAAAcAA8AAAABAA8AAAAcABEAAAABABAAAAAbABEAAAABABEAAAAdABAAAAABABIAAAAdABAAAAABABMAAAAcAA8AAAACAAAAAAAcAA8AAAACAAEAAAAbABEAAAACAAIAAAAbABEAAAACAAMAAAAbABEAAAACAAQAAAAcAA8AAAACAAUAAAAbABEAAAACAAYAAAAbABAAAAACAAcAAAAbAA8AAAACAAgAAAAcABEAAAACAAkAAAAdABAAAAACAAoAAAAdABEAAAACAAsAAAAcABAAAAACAAwAAAAbABEAAAACAA0AAAAdAA8AAAACAA4AAAAdAA8AAAACAA8AAAAbAA8AAAACABAAAAAdAA8AAAACABEAAAAbAA8AAAACABIAAAAbAA8AAAACABMAAAAbAA8AAAADAAAAAAAcABEAAAADAAEAAAAdABEAAAADAAIAAAAbABAAAAADAAMAAAAcABAAAAADAAQAAAAbABEAAAADAAUAAAAbABAAAAADAAYAAAAdABAAAAADAAcAAAAcABAAAAADAAgAAAAcABAAAAADAAkAAAAcAA8AAAADAAoAAAAcAA8AAAADAAsAAAAcABAAAAADAAwAAAAdABAAAAADAA0AAAAcAA8AAAADAA4AAAAdABAAAAADAA8AAAAdAA8AAAADABAAAAAdABAAAAADABEAAAAcABAAAAADABIAAAAbABEAAAADABMAAAAdABEAAAAEAAAAAAAbABAAAAAEAAEAAAAcABEAAAAEAAIAAAAcAA8AAAAEAAMAAAAdABEAAAAEAAQAAAAdAA8AAAAEAAUAAAAbAA8AAAAEAAYAAAAcAA8AAAAEAAcAAAAdAA8AAAAEAAgAAAAcAA8AAAAEAAkAAAAdABAAAAAEAAoAAAAdAA8AAAAEAAsAAAAbAA8AAAAEAAwAAAAbABAAAAAEAA0AAAAcABAAAAAEAA4AAAAdABAAAAAEAA8AAAAbABAAAAAEABAAAAAdABEAAAAEABEAAAAbABAAAAAEABIAAAAcABEAAAAEABMAAAAcAA8AAAAFAAAAAAAdABAAAAAFAAEAAAAbAA8AAAAFAAIAAAAbAA8AAAAFAAMAAAAdAA8AAAAFAAQAAAAcAA8AAAAFAAUAAAAdABEAAAAFAAYAAAAdAA8AAAAFAAcAAAAdAA8AAAAFAAgAAAAbABEAAAAFAAkAAAAdABAAAAAFAAoAAAAbABAAAAAFAAsAAAAbABAAAAAFAAwAAAAcAA8AAAAFAA0AAAAdABAAAAAFAA4AAAAdAA8AAAAFAA8AAAAbAA8AAAAFABAAAAAdABEAAAAFABEAAAAcABEAAAAFABIAAAAcABAAAAAFABMAAAAbABAAAAAGAAAAAAAdABEAAAAGAAEAAAAbABAAAAAGAAIAAAAdABAAAAAGAAMAAAAdABAAAAAGAAQAAAAdABAAAAAGAAUAAAAdAA8AAAAGAAYAAAAbABEAAAAGAAcAAAAdABEAAAAGAAgAAAAcABEAAAAGAAkAAAAbABEAAAAGAAoAAAAcAA8AAAAGAAsAAAAcABAAAAAGAAwAAAAdABEAAAAGAA0AAAAdAA8AAAAGAA4AAAAbABAAAAAGAA8AAAAdABAAAAAGABAAAAAdAA8AAAAGABEAAAAcAA8AAAAGABIAAAAcAA8AAAAGABMAAAAcABEAAAAHAAAAAAAbABEAAAAHAAEAAAAdAA8AAAAHAAIAAAAdABEAAAAHAAMAAAAcABAAAAAHAAQAAAAbABEAAAAHAAUAAAAdABAAAAAHAAYAAAAdAA8AAAAHAAcAAAAdABEAAAAHAAgAAAAcABAAAAAHAAkAAAAbABAAAAAHAAoAAAAbAA8AAAAHAAsAAAAdABAAAAAHAAwAAAAcAA8AAAAHAA0AAAAcAA8AAAAHAA4AAAAcABEAAAAHAA8AAAAdAA8AAAAHABAAAAAcAA8AAAAHABEAAAAbAA8AAAAHABIAAAAcABAAAAAHABMAAAAcABAAAAAIAAAAAAAdABEAAAAIAAEAAAAbABEAAAAIAAIAAAAbABEAAAAIAAMAAAAbABAAAAAIAAQAAAAcABAAAAAIAAUAAAAbABEAAAAIAAYAAAAbABAAAAAIAAcAAAAcABAAAAAIAAgAAAAcABEAAAAIAAkAAAAbABAAAAAIAAoAAAAcAA8AAAAIAAsAAAAbABEAAAAIAAwAAAAdABAAAAAIAA0AAAAdABAAAAAIAA4AAAAcAA8AAAAIAA8AAAAbABEAAAAIABAAAAAbAA8AAAAIABEAAAAdAA8AAAAIABIAAAAdABAAAAAIABMAAAAdAA8AAAAJAAAAAAAdABAAAAAJAAEAAAAdABEAAAAJAAIAAAAdAA8AAAAJAAMAAAAcABEAAAAJAAQAAAAdABEAAAAJAAUAAAAbABEAAAAJAAYAAAAbABAAAAAJAAcAAAAcABEAAAAJAAgAAAAcABEAAAAJAAkAAAAbABAAAAAJAAoAAAAdABAAAAAJAAsAAAAdABEAAAAJAAwAAAAcABAAAAAJAA0AAAAcABAAAAAJAA4AAAAbABAAAAAJAA8AAAAbABAAAAAJABAAAAAbABEAAAAJABEAAAAdABAAAAAJABIAAAAdAA8AAAAJABMAAAAcABAAAAAKAAAAAAAcABAAAAAKAAEAAAAcABEAAAAKAAIAAAAbABAAAAAKAAMAAAAdABAAAAAKAAQAAAAdABAAAAAKAAUAAAAcABEAAAAKAAYAAAAbAA8AAAAKAAcAAAAbABEAAAAKAAgAAAAcABAAAAAKAAkAAAAbABEAAAAKAAoAAAAdABEAAAAKAAsAAAAdABAAAAAKAAwAAAAcABAAAAAKAA0AAAAdAA8AAAAKAA4AAAAdABAAAAAKAA8AAAAcAA8AAAAKABAAAAAcABAAAAAKABEAAAAdABAAAAAKABIAAAAdABEAAAAKABMAAAAdABAAAAALAAAAAAAbAA8AAAALAAEAAAAbAA8AAAALAAIAAAAdAA8AAAALAAMAAAAdABAAAAALAAQAAAAdAA8AAAALAAUAAAAdABAAAAALAAYAAAAdAA8AAAALAAcAAAAcABEAAAALAAgAAAAbAA8AAAALAAkAAAAbABAAAAALAAoAAAAdABAAAAALAAsAAAAcABAAAAALAAwAAAAcABAAAAALAA0AAAAdABEAAAALAA4AAAAcABAAAAALAA8AAAAcAA8AAAALABAAAAAbABAAAAALABEAAAAcABAAAAALABIAAAAdABEAAAALABMAAAAdABEAAAAMAAAAAAAcAA8AAAAMAAEAAAAbAA8AAAAMAAIAAAAdABAAAAAMAAMAAAAcABAAAAAMAAQAAAAbABAAAAAMAAUAAAAcABEAAAAMAAYAAAAcABEAAAAMAAcAAAAdABEAAAAMAAgAAAAbABAAAAAMAAkAAAAbABEAAAAMAAoAAAAdABEAAAAMAAsAAAAbAA8AAAAMAAwAAAAcABEAAAAMAA0AAAAcABAAAAAMAA4AAAAbABEAAAAMAA8AAAAbABAAAAAMABAAAAAdABEAAAAMABEAAAAcABEAAAAMABIAAAAcABAAAAAMABMAAAAcABAAAAANAAAAAAAdABAAAAANAAEAAAAdABEAAAANAAIAAAAbAA8AAAANAAMAAAAcAA8AAAANAAQAAAAcAA8AAAANAAUAAAAbAA8AAAANAAYAAAAbABEAAAANAAcAAAAdABEAAAANAAgAAAAdAA8AAAANAAkAAAAdABEAAAANAAoAAAAdAA8AAAANAAsAAAAcAA8AAAANAAwAAAAcABAAAAANAA0AAAAcAA8AAAANAA4AAAAbABAAAAANAA8AAAAdABAAAAANABAAAAAcABEAAAANABEAAAAdABEAAAANABIAAAAdABAAAAANABMAAAAdAA8AAAAOAAAAAAAdAA8AAAAOAAEAAAAdABAAAAAOAAIAAAAdAA8AAAAOAAMAAAAdAA8AAAAOAAQAAAAbABEAAAAOAAUAAAAcABAAAAAOAAYAAAAdABEAAAAOAAcAAAAdABEAAAAOAAgAAAAdABAAAAAOAAkAAAAcABAAAAAOAAoAAAAcABAAAAAOAAsAAAAbAA8AAAAOAAwAAAAbABEAAAAOAA0AAAAbAA8AAAAOAA4AAAAdAA8AAAAOAA8AAAAcABEAAAAOABAAAAAdAA8AAAAOABEAAAAbABEAAAAOABIAAAAcABAAAAAOABMAAAAcAA8AAAAPAAAAAAAbABAAAAAPAAEAAAAcABAAAAAPAAIAAAAcABEAAAAPAAMAAAAbABAAAAAPAAQAAAAdABAAAAAPAAUAAAAdAA8AAAAPAAYAAAAbABEAAAAPAAcAAAAcAA8AAAAPAAgAAAAdABEAAAAPAAkAAAAbABAAAAAPAAoAAAAbABEAAAAPAAsAAAAbAA8AAAAPAAwAAAAcABEAAAAPAA0AAAAbABAAAAAPAA4AAAAcABAAAAAPAA8AAAAcAA8AAAAPABAAAAAcABEAAAAPABEAAAAdAA8AAAAPABIAAAAbABAAAAAPABMAAAAcABAAAAAQAAAAAAAbABAAAAAQAAEAAAAbABEAAAAQAAIAAAAcABAAAAAQAAMAAAAdAA8AAAAQAAQAAAAcABAAAAAQAAUAAAAdABAAAAAQAAYAAAAbABAAAAAQAAcAAAAdABAAAAAQAAgAAAAbABEAAAAQAAkAAAAdABEAAAAQAAoAAAAcABAAAAAQAAsAAAAbABAAAAAQAAwAAAAbABEAAAAQAA0AAAAdAA8AAAAQAA4AAAAbABAAAAAQAA8AAAAcAA8AAAAQABAAAAAcABEAAAAQABEAAAAcABEAAAAQABIAAAAdAA8AAAAQABMAAAAdABAAAAARAAAAAAAbAA8AAAARAAEAAAAcAA8AAAARAAIAAAAcAA8AAAARAAMAAAAbAA8AAAARAAQAAAAbAA8AAAARAAUAAAAbABEAAAARAAYAAAAdABEAAAARAAcAAAAdABEAAAARAAgAAAAcABAAAAARAAkAAAAdABEAAAARAAoAAAAbABAAAAARAAsAAAAcAA8AAAARAAwAAAAcABAAAAARAA0AAAAbABEAAAARAA4AAAAdAA8AAAARAA8AAAAdABAAAAARABAAAAAbAA8AAAARABEAAAAbAA8AAAARABIAAAAbABEAAAARABMAAAAbABAAAAASAAAAAAAcABAAAAASAAEAAAAcABEAAAASAAIAAAAcABEAAAASAAMAAAAcABEAAAASAAQAAAAdABAAAAASAAUAAAAcAA8AAAASAAYAAAAbAA8AAAASAAcAAAAbABEAAAASAAgAAAAbABAAAAASAAkAAAAcABEAAAASAAoAAAAbAA8AAAASAAsAAAAdABEAAAASAAwAAAAdAA8AAAASAA0AAAAdABEAAAASAA4AAAAbAA8AAAASAA8AAAAbABAAAAASABAAAAAcABAAAAASABEAAAAcABEAAAASABIAAAAcAA8AAAASABMAAAAbABEAAAATAAAAAAAdAA8AAAATAAEAAAAcABAAAAATAAIAAAAcAA8AAAATAAMAAAAdABAAAAATAAQAAAAdAA8AAAATAAUAAAAbABEAAAATAAYAAAAbABEAAAATAAcAAAAcABAAAAATAAgAAAAbABEAAAATAAkAAAAbABEAAAATAAoAAAAdAA8AAAATAAsAAAAbABAAAAATAAwAAAAcABEAAAATAA0AAAAbAA8AAAATAA4AAAAdABEAAAATAA8AAAAdAA8AAAATABAAAAAdAA8AAAATABEAAAAbAA8AAAATABIAAAAbAA8AAAATABMAAAAbABEAAAAUAAAAAAAbABAAAAAUAAEAAAAbABAAAAAUAAIAAAAdABAAAAAUAAMAAAAbAA8AAAAUAAQAAAAbAA8AAAAUAAUAAAAbABAAAAAUAAYAAAAdABAAAAAUAAcAAAAcABEAAAAUAAgAAAAdABEAAAAUAAkAAAAbABAAAAAUAAoAAAAdABAAAAAUAAsAAAAcAA8AAAAUAAwAAAAdABAAAAAUAA0AAAAdABEAAAAUAA4AAAAbABEAAAAUAA8AAAAdABEAAAAUABAAAAAdABAAAAAUABEAAAAdABAAAAAUABIAAAAbABAAAAAUABMAAAAbAA8AAAAVAAAAAAAbAA8AAAAVAAEAAAAdABAAAAAVAAIAAAAdABAAAAAVAAMAAAAdABEAAAAVAAQAAAAbABEAAAAVAAUAAAAdABAAAAAVAAYAAAAbABEAAAAVAAcAAAAcABEAAAAVAAgAAAAdABEAAAAVAAkAAAAcABAAAAAVAAoAAAAdABEAAAAVAAsAAAAbABAAAAAVAAwAAAAbAA8AAAAVAA0AAAAdABEAAAAVAA4AAAAcABAAAAAVAA8AAAAbABEAAAAVABAAAAAcABAAAAAVABEAAAAcAA8AAAAVABIAAAAdABEAAAAVABMAAAAcABAAAAAWAAAAAAAbABAAAAAWAAEAAAAdABEAAAAWAAIAAAAbABAAAAAWAAMAAAAdABAAAAAWAAQAAAAbABEAAAAWAAUAAAAcABAAAAAWAAYAAAAcABAAAAAWAAcAAAAdABAAAAAWAAgAAAAdABEAAAAWAAkAAAAbABAAAAAWAAoAAAAcAA8AAAAWAAsAAAAcAA8AAAAWAAwAAAAdAA8AAAAWAA0AAAAdABAAAAAWAA4AAAAbABAAAAAWAA8AAAAdAA8AAAAWABAAAAAdABAAAAAWABEAAAAcABEAAAAWABIAAAAdAA8AAAAWABMAAAAcAA8AAAAXAAAAAAAcABEAAAAXAAEAAAAcAA8AAAAXAAIAAAAcAA8AAAAXAAMAAAAcABEAAAAXAAQAAAAbAA8AAAAXAAUAAAAdABAAAAAXAAYAAAAbABEAAAAXAAcAAAAcABEAAAAXAAgAAAAcABEAAAAXAAkAAAAcABEAAAAXAAoAAAAdABEAAAAXAAsAAAAcABAAAAAXAAwAAAAbABAAAAAXAA0AAAAdABAAAAAXAA4AAAAbABAAAAAXAA8AAAAdAA8AAAAXABAAAAAcABAAAAAXABEAAAAcABAAAAAXABIAAAAbABAAAAAXABMAAAAdABAAAAAYAAAAAAAdABEAAAAYAAEAAAAdABEAAAAYAAIAAAAbABAAAAAYAAMAAAAcAA8AAAAYAAQAAAAbABEAAAAYAAUAAAAbABAAAAAYAAYAAAAcABAAAAAYAAcAAAAbABEAAAAYAAgAAAAdAA8AAAAYAAkAAAAcABEAAAAYAAoAAAAbABAAAAAYAAsAAAAdABEAAAAYAAwAAAAcABEAAAAYAA0AAAAdABEAAAAYAA4AAAAdAA8AAAAYAA8AAAAdABEAAAAYABAAAAAdAA8AAAAYABEAAAAcABEAAAAYABIAAAAcABAAAAAYABMAAAAdABAAAAAZAAAAAAAcABAAAAAZAAEAAAAbABAAAAAZAAIAAAAbABEAAAAZAAMAAAAbABAAAAAZAAQAAAAbABAAAAAZAAUAAAAdAA8AAAAZAAYAAAAcABEAAAAZAAcAAAAdAA8AAAAZAAgAAAAbABAAAAAZAAkAAAAcABAAAAAZAAoAAAAdAA8AAAAZAAsAAAAbABAAAAAZAAwAAAAcABAAAAAZAA0AAAAcABEAAAAZAA4AAAAcABAAAAAZAA8AAAAcABAAAAAZABAAAAAbABEAAAAZABEAAAAcABAAAAAZABIAAAAdABAAAAAZABMAAAAdABEAAAAaAAAAAAAdAA8AAAAaAAEAAAAbABAAAAAaAAIAAAAcAA8AAAAaAAMAAAAdABAAAAAaAAQAAAAbABEAAAAaAAUAAAAcABAAAAAaAAYAAAAcABAAAAAaAAcAAAAdAA8AAAAaAAgAAAAdABEAAAAaAAkAAAAcAA8AAAAaAAoAAAAdABEAAAAaAAsAAAAdABEAAAAaAAwAAAAcABEAAAAaAA0AAAAbAA8AAAAaAA4AAAAdABAAAAAaAA8AAAAcAA8AAAAaABAAAAAcABEAAAAaABEAAAAcABEAAAAaABIAAAAbABAAAAAaABMAAAAcABEAAAAbAAAAAAAbABEAAAAbAAEAAAAcAA8AAAAbAAIAAAAdAA8AAAAbAAMAAAAdAA8AAAAbAAQAAAAcABAAAAAbAAUAAAAdAA8AAAAbAAYAAAAdABAAAAAbAAcAAAAdABEAAAAbAAgAAAAcABEAAAAbAAkAAAAcABEAAAAbAAoAAAAdABAAAAAbAAsAAAAbABAAAAAbAAwAAAAcAA8AAAAbAA0AAAAcAA8AAAAbAA4AAAAdABEAAAAbAA8AAAAbABEAAAAbABAAAAAcABAAAAAbABEAAAAdAA8AAAAbABIAAAAdABEAAAAbABMAAAAbABEAAAAcAAAAAAAdAA8AAAAcAAEAAAAdABEAAAAcAAIAAAAdABAAAAAcAAMAAAAcABEAAAAcAAQAAAAbABAAAAAcAAUAAAAdAA8AAAAcAAYAAAAdABAAAAAcAAcAAAAcAA8AAAAcAAgAAAAbABEAAAAcAAkAAAAcAA8AAAAcAAoAAAAbABEAAAAcAAsAAAAcABAAAAAcAAwAAAAbABEAAAAcAA0AAAAcABEAAAAcAA4AAAAdAA8AAAAcAA8AAAAbABAAAAAcABAAAAAcABEAAAAcABEAAAAcABAAAAAcABIAAAAbABEAAAAcABMAAAAcABAAAAAdAAAAAAAcABEAAAAdAAEAAAAbABAAAAAdAAIAAAAbABEAAAAdAAMAAAAbAA8AAAAdAAQAAAAbABEAAAAdAAUAAAAbABAAAAAdAAYAAAAcABAAAAAdAAcAAAAcABAAAAAdAAgAAAAbABAAAAAdAAkAAAAbABEAAAAdAAoAAAAbABAAAAAdAAsAAAAdABAAAAAdAAwAAAAcAA8AAAAdAA0AAAAcABEAAAAdAA4AAAAcABEAAAAdAA8AAAAcABEAAAAdABAAAAAbABEAAAAdABEAAAAdABAAAAAdABIAAAAbAA8AAAAdABMAAAAcABAAAAAeAAAAAAAcABEAAAAeAAEAAAAdAA8AAAAeAAIAAAAbAA8AAAAeAAMAAAAdAA8AAAAeAAQAAAAdABAAAAAeAAUAAAAcAA8AAAAeAAYAAAAcAA8AAAAeAAcAAAAcAA8AAAAeAAgAAAAbABAAAAAeAAkAAAAcABEAAAAeAAoAAAAcABAAAAAeAAsAAAAcABEAAAAeAAwAAAAcAA8AAAAeAA0AAAAcABAAAAAeAA4AAAAdABEAAAAeAA8AAAAbABEAAAAeABAAAAAdABEAAAAeABEAAAAcAA8AAAAeABIAAAAcAA8AAAAeABMAAAAdABAAAAAfAAAAAAAbAA8AAAAfAAEAAAAbAA8AAAAfAAIAAAAbABEAAAAfAAMAAAAbABEAAAAfAAQAAAAdABEAAAAfAAUAAAAbABEAAAAfAAYAAAAdAA8AAAAfAAcAAAAcABEAAAAfAAgAAAAcABAAAAAfAAkAAAAdAA8AAAAfAAoAAAAbABEAAAAfAAsAAAAcABAAAAAfAAwAAAAcAA8AAAAfAA0AAAAbABEAAAAfAA4AAAAbABAAAAAfAA8AAAAbABEAAAAfABAAAAAcABEAAAAfABEAAAAcABEAAAAfABIAAAAcABEAAAAfABMAAAAbABAAAAAgAAAAAAAcABAAAAAgAAEAAAAdABEAAAAgAAIAAAAcAA8AAAAgAAMAAAAcAA8AAAAgAAQAAAAbABAAAAAgAAUAAAAcABEAAAAgAAYAAAAdABEAAAAgAAcAAAAcABEAAAAgAAgAAAAdABEAAAAgAAkAAAAdABAAAAAgAAoAAAAdABEAAAAgAAsAAAAbABAAAAAgAAwAAAAdABEAAAAgAA0AAAAbAA8AAAAgAA4AAAAdABAAAAAgAA8AAAAcAA8AAAAgABAAAAAcAA8AAAAgABEAAAAdABEAAAAgABIAAAAdABEAAAAgABMAAAAcABAAAAAhAAAAAAAdABAAAAAhAAEAAAAbABEAAAAhAAIAAAAbAA8AAAAhAAMAAAAbAA8AAAAhAAQAAAAbABAAAAAhAAUAAAAcABAAAAAhAAYAAAAdABAAAAAhAAcAAAAbABAAAAAhAAgAAAAcABEAAAAhAAkAAAAbABEAAAAhAAoAAAAbABAAAAAhAAsAAAAdAA8AAAAhAAwAAAAbABEAAAAhAA0AAAAbABAAAAAhAA4AAAAbABEAAAAhAA8AAAAcABEAAAAhABAAAAAdABAAAAAhABEAAAAdABEAAAAhABIAAAAdAA8AAAAhABMAAAAbAA8AAAAiAAAAAAAdABEAAAAiAAEAAAAcAA8AAAAiAAIAAAAcABEAAAAiAAMAAAAdABAAAAAiAAQAAAAdABEAAAAiAAUAAAAcAA8AAAAiAAYAAAAcABEAAAAiAAcAAAAbAA8AAAAiAAgAAAAbAA8AAAAiAAkAAAAcABAAAAAiAAoAAAAcABEAAAAiAAsAAAAdABAAAAAiAAwAAAAcAA8AAAAiAA0AAAAcABAAAAAiAA4AAAAbABAAAAAiAA8AAAAcABEAAAAiABAAAAAcABAAAAAiABEAAAAcABAAAAAiABIAAAAcABEAAAAiABMAAAAdABEAAAAjAAAAAAAbABAAAAAjAAEAAAAcABEAAAAjAAIAAAAcAA8AAAAjAAMAAAAdABAAAAAjAAQAAAAbABAAAAAjAAUAAAAbABAAAAAjAAYAAAAdAA8AAAAjAAcAAAAcABAAAAAjAAgAAAAbABEAAAAjAAkAAAAbAA8AAAAjAAoAAAAdAA8AAAAjAAsAAAAdAA8AAAAjAAwAAAAbABAAAAAjAA0AAAAcABAAAAAjAA4AAAAcABEAAAAjAA8AAAAbAA8AAAAjABAAAAAdABAAAAAjABEAAAAdABEAAAAjABIAAAAdAA8AAAAjABMAAAAbAA8AAAA=")
tile_set = ExtResource("2_4mnel")

[node name="faction_lock_container" type="VBoxContainer" parent="."]
offset_left = 30.0
offset_top = 62.0
offset_right = 230.0
offset_bottom = 287.0

[node name="holy_lock_container" type="HBoxContainer" parent="faction_lock_container"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="faction_lock_container/holy_lock_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4xgvd")
theme_override_font_sizes/font_size = 8
text = "holy"

[node name="holy_faction_lock" type="CheckButton" parent="faction_lock_container/holy_lock_container"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_ky6jo")
icon_alignment = 2

[node name="forestProtector_lock_container" type="HBoxContainer" parent="faction_lock_container"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="faction_lock_container/forestProtector_lock_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4xgvd")
theme_override_font_sizes/font_size = 8
text = "forestProtector"

[node name="forestProtector_faction_lock" type="CheckButton" parent="faction_lock_container/forestProtector_lock_container"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_ky6jo")
icon_alignment = 2

[node name="undead_lock_container" type="HBoxContainer" parent="faction_lock_container"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="faction_lock_container/undead_lock_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4xgvd")
theme_override_font_sizes/font_size = 8
text = "undead"

[node name="undead_faction_lock" type="CheckButton" parent="faction_lock_container/undead_lock_container"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_ky6jo")
icon_alignment = 2

[node name="demon_lock_container" type="HBoxContainer" parent="faction_lock_container"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="faction_lock_container/demon_lock_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4xgvd")
theme_override_font_sizes/font_size = 8
text = "holy"

[node name="demon_faction_lock" type="CheckButton" parent="faction_lock_container/demon_lock_container"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("4_ky6jo")
icon_alignment = 2

[node name="back_button" type="Button" parent="."]
offset_left = 452.0
offset_top = 270.0
offset_right = 544.0
offset_bottom = 310.0
theme_override_fonts/font = ExtResource("3_4xgvd")
text = "Back"

[connection signal="toggled" from="faction_lock_container/holy_lock_container/holy_faction_lock" to="." method="_on_holy_faction_lock_toggled"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
